@@ -1,5 +1,7 @@
 2009-06-24  higepon  <higepon@users.sourceforge.jp>
 
+        * OSCompat.cpp : Added changeTime, accessTime and modifyTime.
+
         * OSCompatThread.h (scheme): Rewrote Conditional Variables on Windows.
 
 2009-06-23  higepon  <higepon@users.sourceforge.jp>
